# Recorder

./: .env  .gitignore  Procfile  READEME.md  README.md  app.py  pyproject.toml
api/auth/: jwt.py
api/v1/: router.py
api/v1/handlers/: record.py  user.py
core/: security.py
docs/: database_design
models/: record_model.py
schemas/: auth_schema.py  user_schema.py
services/: record_service.py  user_service.py
src/: app.py  config.py  exceptions.py  main.py  pyproject.toml  requirements.txt  router.py  security.py
src/auth/: router.py  schemas.py  service.py
src/categories/: models.py  router.py  schemas.py  service.py
src/records/: exceptions.py  models.py  router.py  schemas.py  service.py
src/tags/: models.py  router.py  schemas.py  service.py
src/templates/: models.py  router.py  schemas.py  service.py
src/users/: dependencies.py  models.py  router.py  schemas.py  service.py
tests/: test_app.py
tests/auth/: test_auth.py
tests/users/: test_users.py
